--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./contabilidad.js"
+    "start": "node ../modulosjs/contabilidad/contabilidad.js"
   },
   "keywords": [
     "Javascript",
@@ -13,5 +13,17 @@
   ],
   "author": "Laura Juliana Ruiz",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lajuruiz/modulosjs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lajuruiz/modulosjs/issues"
+  },
+  "homepage": "https://github.com/lajuruiz/modulosjs#readme",
+  "dependencies": {
+    "is-odd": "^3.0.1",
+    "node-fetch": "^3.2.10"
+  }
 }
